--- a/CocktailApp/Base.lproj/Main.storyboard
+++ b/CocktailApp/Base.lproj/Main.storyboard
@@ -130,7 +130,7 @@
                                                 <rect key="frame" x="16" y="8" width="361" height="50"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Margarita" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="b1b-qH-7a3">
-                                                        <rect key="frame" x="16" y="8" width="279" height="34"/>
+                                                        <rect key="frame" x="16" y="8" width="329" height="34"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="34" id="nVo-N1-mQz"/>
                                                         </constraints>
@@ -138,32 +138,14 @@
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NIX-iv-MnI">
-                                                        <rect key="frame" x="311" y="8" width="34" height="34"/>
-                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" constant="34" id="2sv-Kl-o8v"/>
-                                                            <constraint firstAttribute="height" constant="34" id="wgO-6U-ab5"/>
-                                                        </constraints>
-                                                        <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="plain">
-                                                            <imageReference key="image" image="heart" catalog="system" symbolScale="large"/>
-                                                        </buttonConfiguration>
-                                                        <connections>
-                                                            <action selector="favoriteButtonTapped:" destination="VxW-bQ-wca" eventType="touchUpInside" id="o7n-NC-WJo"/>
-                                                        </connections>
-                                                    </button>
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
                                                     <constraint firstAttribute="bottom" secondItem="b1b-qH-7a3" secondAttribute="bottom" constant="8" id="1KB-eL-mpL"/>
                                                     <constraint firstAttribute="height" constant="50" id="5fh-Ee-0zF"/>
-                                                    <constraint firstItem="NIX-iv-MnI" firstAttribute="leading" secondItem="b1b-qH-7a3" secondAttribute="trailing" constant="16" id="SeA-ax-hMT"/>
                                                     <constraint firstItem="b1b-qH-7a3" firstAttribute="top" secondItem="umH-qY-qYH" secondAttribute="top" constant="8" id="bg0-7w-h77"/>
-                                                    <constraint firstAttribute="trailing" secondItem="NIX-iv-MnI" secondAttribute="trailing" constant="16" id="jwn-NO-J1I"/>
-                                                    <constraint firstItem="NIX-iv-MnI" firstAttribute="top" secondItem="umH-qY-qYH" secondAttribute="top" constant="8" id="q7O-nm-gZt"/>
+                                                    <constraint firstAttribute="trailing" secondItem="b1b-qH-7a3" secondAttribute="trailing" constant="16" id="c6E-NW-7Hx"/>
                                                     <constraint firstItem="b1b-qH-7a3" firstAttribute="leading" secondItem="umH-qY-qYH" secondAttribute="leading" constant="16" id="wam-x9-fhf"/>
-                                                    <constraint firstAttribute="bottom" secondItem="NIX-iv-MnI" secondAttribute="bottom" constant="8" id="zLg-Xt-ufi"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tbb-PK-Nqi" userLabel="ImageContainerView">
@@ -340,7 +322,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="heart" catalog="system" width="128" height="107"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <image name="rectangle.split.2x2.fill" catalog="system" width="128" height="93"/>
         <image name="rectangle.split.3x3.fill" catalog="system" width="128" height="93"/>
