--- a/CocktailApp/Base.lproj/Main.storyboard
+++ b/CocktailApp/Base.lproj/Main.storyboard
@@ -230,7 +230,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aVj-aV-wPu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3238.9312977099235" y="-341.54929577464793"/>
+            <point key="canvasLocation" x="3085" y="-815"/>
         </scene>
         <!--Search View Controller-->
         <scene sceneID="tCw-wf-Ekm">
@@ -277,6 +277,69 @@
             </objects>
             <point key="canvasLocation" x="946" y="87"/>
         </scene>
+        <!--Random Cocktail View Controller-->
+        <scene sceneID="sS9-ly-dnF">
+            <objects>
+                <viewController id="VdT-V2-b0D" customClass="RandomCocktailViewController" customModule="CocktailApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="QVs-3y-Foc">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qX4-30-KdS">
+                                <rect key="frame" x="106" y="117" width="180" height="230"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="180" id="23s-Pq-woX"/>
+                                    <constraint firstAttribute="height" constant="230" id="v8F-o4-wML"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ht-Us-C9L">
+                                <rect key="frame" x="50" y="355" width="293" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="293" id="IV5-EQ-Lft"/>
+                                    <constraint firstAttribute="height" constant="50" id="xuP-Ym-m33"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QCv-XG-pCa">
+                                <rect key="frame" x="159" y="472" width="75" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="2ge-5H-qtr"/>
+                                    <constraint firstAttribute="height" constant="35" id="wvQ-Yd-f06"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="bringRandomButtonTapped:" destination="VdT-V2-b0D" eventType="touchUpInside" id="kfU-tv-lth"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="sGz-hL-stW"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="sGz-hL-stW" firstAttribute="trailing" secondItem="QCv-XG-pCa" secondAttribute="trailing" constant="159" id="5kp-Rq-vX1"/>
+                            <constraint firstItem="qX4-30-KdS" firstAttribute="leading" secondItem="sGz-hL-stW" secondAttribute="leading" constant="106" id="8C6-K7-dcc"/>
+                            <constraint firstItem="8ht-Us-C9L" firstAttribute="top" secondItem="qX4-30-KdS" secondAttribute="bottom" constant="8" symbolic="YES" id="F5l-nB-zxh"/>
+                            <constraint firstItem="sGz-hL-stW" firstAttribute="bottom" secondItem="QCv-XG-pCa" secondAttribute="bottom" constant="311" id="Knu-2c-Bid"/>
+                            <constraint firstItem="8ht-Us-C9L" firstAttribute="leading" secondItem="sGz-hL-stW" secondAttribute="leading" constant="50" id="QHu-Y2-JOf"/>
+                            <constraint firstItem="sGz-hL-stW" firstAttribute="trailing" secondItem="qX4-30-KdS" secondAttribute="trailing" constant="107" id="RiB-dU-O7J"/>
+                            <constraint firstItem="qX4-30-KdS" firstAttribute="top" secondItem="sGz-hL-stW" secondAttribute="top" constant="14" id="bjI-dr-Z5H"/>
+                            <constraint firstItem="QCv-XG-pCa" firstAttribute="leading" secondItem="sGz-hL-stW" secondAttribute="leading" constant="159" id="h6X-pZ-GDh"/>
+                            <constraint firstItem="QCv-XG-pCa" firstAttribute="top" secondItem="8ht-Us-C9L" secondAttribute="bottom" constant="67" id="mJw-vp-vJ5"/>
+                            <constraint firstItem="sGz-hL-stW" firstAttribute="trailing" secondItem="8ht-Us-C9L" secondAttribute="trailing" constant="50" id="wX5-r6-M4f"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="m4C-t4-H7W"/>
+                    <connections>
+                        <outlet property="imageView" destination="qX4-30-KdS" id="j39-o5-JKz"/>
+                        <outlet property="nameLabel" destination="8ht-Us-C9L" id="W9b-fz-iQL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zle-oR-LYb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2828.2442748091603" y="86.619718309859152"/>
+        </scene>
         <!--Categories-->
         <scene sceneID="xy5-le-dbE">
             <objects>
@@ -319,6 +382,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S2T-2b-0Rw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-19" y="88"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="HgY-rO-71r">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6ZE-rx-usk" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FS8-Q7-RLO">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="VdT-V2-b0D" kind="relationship" relationship="rootViewController" id="moL-yG-zEg"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2ha-N1-v3H" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1901.5267175572519" y="86.619718309859152"/>
         </scene>
     </scenes>
     <resources>
